--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "firebase": "^12.9.0",
     "lucide-react": "^0.563.0",
     "next": "14.2.35",
+    "ogl": "^1.0.11",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^3.4.0",
