--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "firebase": "^12.9.0",
+    "gsap": "^3.14.2",
     "lucide-react": "^0.563.0",
     "next": "14.2.35",
     "ogl": "^1.0.11",
